--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -125,6 +125,27 @@
 
 .mobile-menu{
 	background:#F4E8E4;
+	.mobile_lang_link{
+		margin:0 -15px;
+		font-family: "Novecento";
+		font-size: 13px;
+		font-weight: 300;
+		letter-spacing: 1px;
+		border-top:1px solid #C4BFBE;
+		a{
+			color:#000;
+			line-height: 20px;
+			padding: 10px 15px;
+			display:inline-block;
+			width:31%;
+			text-align:center;
+			text-transform:uppercase;
+			&:hover, &:focus{
+				text-decoration:none;
+				font-weight:500;
+			}
+		}
+	}
 	.mobile_function_link{
 		margin:0 -15px;
 		font-family: "Novecento";
@@ -216,6 +237,10 @@
 			}
 		}
 	}
+}
+
+.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse{
+	max-height:375px;
 }
 
 .language-menu{
