--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -23,6 +23,11 @@ body{
 	padding-top:90px;
 }
 
+a{
+	color:#000!important;
+	//text-decoration:underline;
+}
+
 
 #main-content .breadcrumb-container{
 	background:#F5E8E5;
