--- a/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
@@ -54,6 +54,11 @@
 		&:first-child{
 			margin-top:0;
 		}
+		img{
+			height: auto;
+		    max-width: 100%;
+		}
+		
 		.blog-post-title{
 			text-align:center;
 			font-family: "PlayfairDisplay";
