--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -216,6 +216,17 @@ ul.products li.product{
 			display: block;
 }
 
+.woocommerce .woocommerce-error::before, .woocommerce .woocommerce-info::before, .woocommerce .woocommerce-message::before{
+	display:none;
+}
+
+.woocommerce .woocommerce-error, .woocommerce .woocommerce-info, .woocommerce .woocommerce-message{
+	background:#fff;
+	border:none;
+	padding-left:0!important;
+	padding-right:0!important;
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
