--- a/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
@@ -9,21 +9,35 @@
 	.headline-title-container{
 		background:url(../img/sprites/bg_blog_title.png) no-repeat center;
 		margin-bottom:20px;
+		display:table;
+		width:100%;
 		.headline-title-left{
 			height:110px;
 			background:url(../img/sprites/bg_blog_title_left.png) no-repeat left;
+			display:table-cell;
+			float:none;
 		}
 		.headline-title-center{
 			height: 110px;
-			letter-spacing: 3px;
-			line-height: 480%;
+			//letter-spacing: 3px;
+			//line-height: 480%;
 			text-align: center;
 			text-transform: uppercase;
 			background:none;
+			display:table-cell;
+			float:none;
+			vertical-align:middle;
+			
+			font-family: "Novecento";
+			font-size: 15px;
+			font-weight: 600;
+			letter-spacing: 4px;
 		}
 		.headline-title-right{
 			height:110px;
 			background:url(../img/sprites/bg_blog_title_right.png) no-repeat right;
+			display:table-cell;
+			float:none;
 		}
 	}
 	.blog-link-container{
