--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -307,6 +307,10 @@ body.zh-hant,body.zh-hans{
 	&.contact-us-tc h2,&.contact-us-sc h2{
 		    font-family: "PlayfairDisplay"!important;
 	}
+	
+	.mobile-menu .mobile_function_link{
+		font-family: 'Heiti TC Medium','MHeiHK',"微軟正黑體","Microsoft JhengHei",'SimHei',sans-serif!important;
+	}
 }
 
 //===============================================================================
